WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
19784
REGRESSION (
r34787
?): Text areas in Wikipedia edit pages are empty, following content is missing
https://bugs.webkit.org/show_bug.cgi?id=19784
Summary
REGRESSION (r34787?): Text areas in Wikipedia edit pages are empty, following...
mitz
Reported
2008-06-26 14:11:44 PDT
It seems like no content is parsed after the beginning of the text area in Wikipedia edit pages, such as the above URL. The text area is empty and none of the rest of the DOM is present.
Attachments
Step 1: Don't allow entities to start comments
(35.61 KB, patch)
2008-06-26 20:49 PDT
,
Adam Barth
darin
: review+
Details
Formatted Diff
Diff
Step 2: Handle unterminated comments correctly
(24.92 KB, patch)
2008-06-26 20:49 PDT
,
Adam Barth
darin
: review+
Details
Formatted Diff
Diff
Test case with properly encoded comment in textarea.
(148 bytes, text/html)
2008-06-27 11:18 PDT
,
Robert Wallis
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2008-06-26 14:28:15 PDT
I'll take a look at this when I get home tonight.
Adam Barth
Comment 2
2008-06-26 17:30:34 PDT
Reduction <
http://crypto.stanford.edu/~abarth/research/webkit/textarea/wikipedia.html
>: <html> <body> <textarea> <!-- </textarea> </body> </html>
Adam Barth
Comment 3
2008-06-26 20:49:04 PDT
Created
attachment 21966
[details]
Step 1: Don't allow entities to start comments This fixes the wikipedia issue.
Adam Barth
Comment 4
2008-06-26 20:49:51 PDT
Created
attachment 21967
[details]
Step 2: Handle unterminated comments correctly
Darin Adler
Comment 5
2008-06-27 09:08:33 PDT
Comment on
attachment 21966
[details]
Step 1: Don't allow entities to start comments It's be better if more of the new tests were text-only "dumpAsText" tests so they could be more portable cross-platform. r=me
Darin Adler
Comment 6
2008-06-27 09:08:54 PDT
Comment on
attachment 21967
[details]
Step 2: Handle unterminated comments correctly r=me
Darin Adler
Comment 7
2008-06-27 09:10:09 PDT
Comment on
attachment 21966
[details]
Step 1: Don't allow entities to start comments Actually, it would be better to put the new condition at the *end* of the if statement to minimize the possibility of a performance regression in code that might be pretty hot.
Robert Wallis
Comment 8
2008-06-27 11:18:00 PDT
Created
attachment 21975
[details]
Test case with properly encoded comment in textarea. This test case has an encoded comment tag in it, so it shouldn't be processing that comment tag.
Adam Barth
Comment 9
2008-06-27 11:25:24 PDT
> This test case has an encoded comment tag in it, so it shouldn't be processing > that comment tag.
Thanks for the test case Robert. I believe the change I just committed in
r34831
fixes this issue (including the test case you just attached). I'm waiting for the buildbots to cycle before marking this issue as fixed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug