WebCore:

2008-06-27  Adam Barth  <abarth@webkit.org>

        Reviewed by Darin Adler.

        Fix <https://bugs.webkit.org/show_bug.cgi?id=19784>:
          Text areas in Wikipedia edit pages are empty, following content is missing

        Don't treat entities as comment starters in parseSpecial.

        Tests: fast/parser/comment-in-iframe.html
               fast/parser/entity-comment-in-iframe.html
               fast/parser/entity-comment-in-script-tricky.html
               fast/parser/entity-comment-in-style.html
               fast/parser/entity-comment-in-textarea.html
               fast/parser/entity-comment-in-title.html

        * html/HTMLTokenizer.cpp:
        (WebCore::HTMLTokenizer::parseSpecial):

LayoutTests:

2008-06-27  Adam Barth  <abarth@webkit.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=19784

        Test that entities are not used to start comments.

        * fast/parser/comment-in-iframe-expected.txt: Added.
        * fast/parser/comment-in-iframe.html: Added.
        * fast/parser/entity-comment-in-iframe-expected.txt: Added.
        * fast/parser/entity-comment-in-iframe.html: Added.
        * fast/parser/entity-comment-in-script-tricky-expected.txt: Added.
        * fast/parser/entity-comment-in-script-tricky.html: Added.
        * fast/parser/entity-comment-in-style.html: Added.
        * fast/parser/entity-comment-in-textarea.html: Added.
        * fast/parser/entity-comment-in-title-expected.txt: Added.
        * fast/parser/entity-comment-in-title.html: Added.
        * platform/mac/fast/parser/entity-comment-in-style-expected.checksum: Added.
        * platform/mac/fast/parser/entity-comment-in-style-expected.png: Added.
        * platform/mac/fast/parser/entity-comment-in-style-expected.txt: Added.
        * platform/mac/fast/parser/entity-comment-in-textarea-expected.checksum: Added.
        * platform/mac/fast/parser/entity-comment-in-textarea-expected.png: Added.
        * platform/mac/fast/parser/entity-comment-in-textarea-expected.txt: Added.


Canonical link: https://commits.webkit.org/27277@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34831 268f45cc-cd09-0410-ab3c-d52691b4dbfc