WebCore/html/HTMLTokenizer.cpp
@@ -317,7 +317,10 @@ HTMLTokenizer::State HTMLTokenizer::parseSpecial(SegmentedString &src, State sta
         checkScriptBuffer();
         UChar ch = *src;
 
-        if (!scriptCodeResync && !brokenComments && !state.inXmp() && ch == '-' && scriptCodeSize >= 3 && !src.escaped() && scriptCode[scriptCodeSize-3] == '<' && scriptCode[scriptCodeSize-2] == '!' && scriptCode[scriptCodeSize-1] == '-') {
+        if (!scriptCodeResync && !brokenComments &&
+            !state.inXmp() && ch == '-' && scriptCodeSize >= 3 && !src.escaped() &&
+            scriptCode[scriptCodeSize-3] == '<' && scriptCode[scriptCodeSize-2] == '!' && scriptCode[scriptCodeSize-1] == '-' &&
+            (lastDecodedEntityPosition < scriptCodeSize - 3)) {
             state.setInComment(true);
             state = parseComment(src, state);
             continue;
